# edc

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGES  CHANGES.rst  MANIFEST.in  README.md  README.rst  VERSION  dump.rdb  get_edc_requirements.py  pyproject.toml  requirements.dev.txt  requirements.tests.edc.txt  requirements.tests.submodules.txt  requirements.tests.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
docs/: README.rst  backup.rst  backup_recovery_strategies.rst  celery.rst  compliance.rst  conda.rst  conf.py  configure_web_services.rst  data_security_and_privacy.rst  deploy_new_droplet.rst  disaster_recovery.rst  dump_users.rst  exporting_encrypted_data.rst  features.rst  forms_reference.md  history.rst  index.rst  landing_page.rst  mysql_roles_and_read_only_users.md  mysql_roles_and_read_only_users.rst  other_technologies.rst  overview.rst  prepare_database.rst  printing.rst  protocol_data_management_section.rst  redis.rst  requirements.txt  sql_examples.rst  trials.rst  uv.rst
docs/source/: README.rst  articles.rst  backup.rst  celery.rst  conf.py  deploy_new_droplet.rst  disaster_recovery.rst  dump_users.rst  history.rst  howto.rst  index.rst  prepare_database.rst  protocol_data_management_section.rst  redis.rst  sql_examples.rst  update_deployment.rst  uv.rst
edc/: urls.py
edc/tests/: holidays.csv
edc/tests/etc/: user-aes-local.key  user-aes-restricted.key  user-rsa-local-private.pem  user-rsa-local-public.pem  user-rsa-restricted-private.pem  user-rsa-restricted-public.pem  user-salt-local.key  user-salt-restricted.key
requirements.tests/: coverage.txt  edc.txt  edc_dev.txt  edc_offline.txt  lint.txt  mypi.txt  release.txt  test.txt  test_utils.txt  third_party_dev.txt  tox.txt
requirements.uv/: clinicedc.txt  erikvw.txt  third_party_dev.txt
src/edc/: __init__.py
utils/: get_edc_requirements.py
