[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
source-exclude = ["bin"]
namespace = false

[project]
name = "edc"
version = "1.2.1"
description = "EDC core modules for clinicedc/edc projects"
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = ["django", "clinicedc", "edc", "clinical trials", "research", "data management", "esource"]
authors = [
    { name = "Erik van Widenfelt", email = "ew2789@gmail.com" },
    { name = "Jonathan Willitts", email = "j.willitts@ucl.ac.uk" }
]
maintainers = [
    { name = "Erik van Widenfelt", email = "ew2789@gmail.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = [
    "django==5.2.4",
    "boto3==1.39.15",
    "django-db-views==0.1.11",
    "django-defender==0.9.8",
    "django-environ==0.12.0",
    "django-logentry-admin==1.1.0",
    "django-admin-rangefilter==0.13.3",
    "django-pandas==0.6.7",
    "django-redis==6.0.0",
    "django-simple-history==3.10.1",
    "django-storages==1.14.6",
    "djangorestframework==3.16.0",
    "fontawesomefree==6.6.0",
    "gunicorn==23.0.0",
    "pyrabbit==1.1.0",
    "python-memcached==1.62",
    "django-audit-fields==1.1.0",
    "django-crypto-fields==1.0.1",
    "django-multisite2==2.1.0",
    "django-revision==1.0.0",
    "edc-action-item==1.0.3",
    "edc-adherence==1.0.1",
    "edc-adverse-event==1.0.3",
    "edc-analytics==0.1.4",
    "edc-appconfig==1.0.2",
    "edc-appointment==1.1.1",
    "edc-auth==1.0.2",
    "edc-consent==1.0.3",
    "edc-constants==1.0.1",
    "edc-crf==1.0.2",
    "edc-dashboard==1.0.3",
    "edc-data-manager==1.0.0",
    "edc-device==1.0.1",
    "edc-document-status==1.0.0",
    "edc-dx==1.0.1",
    "edc-dx-review==1.0.1",
    "edc-egfr==1.0.2",
    "edc-export==1.0.4",
    "edc-facility==1.0.2",
    "edc-fieldsets==1.0.1",
    "edc-form-describer==1.0.2",
    "edc-form-label==1.0.2",
    "edc-form-runners==1.0.0",
    "edc-form-validators==1.0.0",
    "edc-glucose==1.0.3",
    "edc-he==1.0.2",
    "edc-identifier==1.0.0",
    "edc-lab==1.0.5",
    "edc-lab-dashboard==1.0.2",
    "edc-lab-panel==1.0.0",
    "edc-lab-results==1.0.2",
    "edc-label==1.0.0",
    "edc-list-data==1.0.0",
    "edc-listboard==1.0.0",
    "edc-locator==1.0.2",
    "edc-ltfu==1.0.1",
    "edc-metadata==1.0.5",
    "edc-microbiology==1.0.0",
    "edc-microscopy==1.0.0",
    "edc-mnsi==1.0.0",
    "edc-model==1.0.0",
    "edc-model-admin==1.0.3",
    "edc-model-fields==1.0.0",
    "edc-model-form==1.0.0",
    "edc-model-to-dataframe==1.0.1",
    "edc-navbar==1.0.0",
    "edc-next-appointment==0.3.1",
    "edc-notification==1.0.1",
    "edc-offstudy==1.0.1",
    "edc-pdf-reports==1.0.2",
    "edc-pdutils==1.0.2",
    "edc-pharmacy==1.2.3",
    "edc-prn==1.1.1",
    "edc-protocol==1.0.1",
    "edc-protocol-incident==1.0.1",
    "edc-pylabels==1.0.1",
    "edc-qareports==1.0.4",
    "edc-qol==1.0.2",
    "edc-randomization==1.0.4",
    "edc-refusal==1.0.1",
    "edc-registration==1.0.1",
    "edc-reportable==2.0.2",
    "edc-review-dashboard==1.0.2",
    "edc-rx==1.0.1",
    "edc-screening==1.1.0",
    "edc-search==1.0.1",
    "edc-sites==1.1.0",
    "edc-subject-dashboard==1.0.1",
    "edc-timepoint==1.0.1",
    "edc-transfer==1.0.1",
    "edc-unblinding==1.0.2",
    "edc-utils==1.1.1",
    "edc-view-utils==1.0.1",
    "edc-visit-schedule==4.1.1",
    "edc-visit-tracking==1.0.2",
    "edc-vitals==1.1.2",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.4.0",
    "amqp==5.3.1",
    "arrow==1.3.0",
    "asgiref==3.9.1",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "billiard==4.2.1",
    "botocore==1.39.15",
    "celery==5.5.3",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "cryptography==45.0.5",
    "django-extensions==4.1",
    "django-pylabels==1.0.1",
    "django-sequences==3.0",
    "filelock==3.18.0",
    "frozenlist==1.7.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "httplib2==0.22.0",
    "idna==3.10",
    "inflect==7.5.0",
    "jmespath==1.0.1",
    "kombu==5.5.4",
    "mempass==0.1.2",
    "more-itertools==10.7.0",
    "multidict==6.6.3",
    "mysqlclient==2.2.7",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "pycparser==2.22",
    "pycryptodomex==3.23.0",
    "pycups==2.0.4",
    "pyjwt==2.10.1",
    "pylabels2==1.4.4",
    "pyparsing==3.2.3",
    "pypdf==5.9.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "redis==6.2.0",
    "reportlab==4.4.3",
    "requests==2.32.4",
    "requests-file==2.1.0",
    "s3transfer==0.13.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "sqlglot==27.4.1",
    "sqlglotrs==0.6.1",
    "sqlparse==0.5.3",
    "tldextract==5.3.0",
    "tqdm==4.67.1",
    "twilio==9.7.0",
    "typeguard==4.4.4",
    "types-python-dateutil==2.9.0.20250708",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "yarl==1.20.1",
    "zxcvbn==4.5.0",
]

[project.urls]
Homepage = "https://github.com/clinicedc"
Documentation = "https://github.com/clinicedc/edc/docs"
Repository = "https://github.com/clinicedc/edc.git"
Changelog = "https://github.com/clinicedc/edc/blob/main/CHANGES"

[dependency-groups]
docs = [
    "furo>=2025.7.19",
    "sphinx>=8.2.3",
]
lint = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.12.5",
]

[tool.black]
line-length = 88

[tool.rstcheck]
ignore_directives = ["toctree"]
