[metadata]
name = edc
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = https://github.com/clinicedc/edc
license = GPL license, see LICENSE
description = EDC core modules for clinicedc/edc projects.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django edc clinical trials research
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.12
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # Third party packages
    argon2-cffi
    boto3
    django-db-views
    django-defender
    django-environ
    django-logentry-admin==1.1.0
    django-pandas
    django-redis
    django-simple-history==3.7.0
    django-storages
    djangorestframework
    fontawesomefree
    gunicorn
    pyrabbit
    python-memcached
    # Packages from: https://github.com/erikvw
    django-audit-fields==0.3.17
    django-crypto-fields==0.4.2
    django-multisite2==2.0.1
    django-revision==0.3.7
    # Packages from: https://github.com/clinicedc
    edc-action-item==0.3.91
    edc-adherence==0.3.15
    edc-adverse-event==0.3.87
    edc-analytics==0.1.4
    edc-appconfig==0.1.13
    edc-appointment==0.4.35
    edc-auth==0.3.91
    edc-consent==0.3.87
    edc-constants==0.3.65
    edc-crf==0.3.77
    edc-dashboard==0.3.64
    edc-data-manager==0.3.79
    edc-device==0.3.19
    edc-document-status==0.3.3
    edc-dx==0.3.9
    edc-dx-review==0.3.4
    edc-egfr==0.3.9
    edc-export==0.3.50
    edc-facility==0.3.38
    edc-fieldsets==0.3.22
    edc-form-describer==0.3.24
    edc-form-label==0.3.19
    edc-form-runners==0.3.12
    edc-form-validators==0.3.41
    edc-glucose==0.3.11
    edc-he==0.3.13
    edc-identifier==0.3.37
    edc-lab==0.3.62
    edc-lab-dashboard==0.3.24
    edc-lab-panel==0.3.7
    edc-lab-results==0.3.15
    edc-label==0.3.20
    edc-list-data==0.3.27
    edc-listboard==0.3.14
    edc-locator==0.3.45
    edc-ltfu==0.3.35
    edc-metadata==1.0.0
    edc-mnsi==0.3.6
    edc-model==0.3.46
    edc-model-admin==0.3.80
    edc-model-fields==0.3.13
    edc-model-form==0.3.3
    edc-navbar==0.3.32
    edc-next-appointment==0.3.1
    edc-notification==0.3.27
    edc-offstudy==0.3.48
    edc-pdf-reports==0.3.25
    edc-pdutils==0.3.47
    edc-pharmacy==0.3.17
    edc-prn==0.3.25
    edc-protocol==0.3.17
    edc-protocol-incident==0.3.6
    edc-pylabels==0.1.3
    edc-qareports==0.1.22
    edc-qol==0.3.7
    edc-randomization==0.3.58
    edc-refusal==0.3.11
    edc-registration==0.3.42
    edc-reportable==0.3.40
    edc-review-dashboard==0.3.39
    edc-rx==0.3.2
    edc-screening==0.3.54
    edc-search==0.3.11
    edc-sites==0.3.67
    edc-subject-dashboard==0.3.73
    edc-timepoint==0.3.22
    edc-transfer==0.3.23
    edc-unblinding==0.4.0
    edc-utils==0.3.39
    edc-view-utils==0.1.2
    edc-visit-schedule==4.0.1
    edc-visit-tracking==0.3.93
    edc-vitals==0.1.14
    # Django
    Django>=5.1.3,<5.2

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    image*

[flake8]
max-line-length = 95
