[metadata]
name = edc
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = https://github.com/clinicedc/edc
license = GPL license, see LICENSE
description = EDC core modules for clinicedc/edc projects.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django edc clinical trials research
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.12
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # Third party packages
    argon2-cffi
    boto3
    django-db-views
    django-defender
    django-environ
    django-logentry-admin==1.1.0
    django-pandas
    django-redis
    django-simple-history==3.7.0
    django-storages
    djangorestframework
    fontawesomefree
    gunicorn
    pyrabbit
    python-memcached
    # Packages from: https://github.com/erikvw
    django-audit-fields==0.3.17
    django-crypto-fields==0.4.2
    django-multisite2==2.0.1
    django-revision==0.3.7
    # Packages from: https://github.com/clinicedc
    edc-action-item==1.0.0
    edc-adherence==1.0.0
    edc-adverse-event==1.0.2
    edc-analytics==0.1.4
    edc-appconfig==1.0.1
    edc-appointment==1.0.6
    edc-auth==1.0.1
    edc-consent==1.0.2
    edc-constants==1.0.0
    edc-crf==1.0.1
    edc-dashboard==1.0.1
    edc-data-manager==0.3.81
    edc-device==1.0.0
    edc-document-status==1.0.0
    edc-dx==1.0.0
    edc-dx-review==1.0.1
    edc-egfr==1.0.0
    edc-export==1.0.1
    edc-facility==1.0.1
    edc-fieldsets==1.0.0
    edc-form-describer==1.0.0
    edc-form-label==1.0.2
    edc-form-runners==1.0.0
    edc-form-validators==1.0.0
    edc-glucose==1.0.1
    edc-he==1.0.1
    edc-identifier==1.0.0
    edc-lab==1.0.1
    edc-lab-dashboard==1.0.1
    edc-lab-panel==1.0.0
    edc-lab-results==1.0.0
    edc-label==1.0.0
    edc-list-data==1.0.0
    edc-listboard==1.0.0
    edc-locator==1.0.2
    edc-ltfu==1.0.0
    edc-metadata==1.0.3
    edc-mnsi==1.0.0
    edc-model==1.0.0
    edc-model-admin==1.0.1
    edc-model-fields==1.0.0
    edc-model-form==1.0.0
    edc-model-to-dataframe==1.0.1
    edc-navbar==1.0.0
    edc-next-appointment==0.3.1
    edc-notification==1.0.0
    edc-offstudy==1.0.0
    edc-pdf-reports==1.0.0
    edc-pdutils==0.3.47
    edc-pharmacy==1.0.2
    edc-prn==1.0.0
    edc-protocol==1.0.0
    edc-protocol-incident==1.0.0
    edc-pylabels==1.0.0
    edc-qareports==1.0.0
    edc-qol==1.0.1
    edc-randomization==1.0.1
    edc-refusal==1.0.0
    edc-registration==1.0.0
    edc-reportable==0.3.40
    edc-review-dashboard==1.0.1
    edc-rx==1.0.0
    edc-screening==1.0.0
    edc-search==1.0.0
    edc-sites==1.0.0
    edc-subject-dashboard==1.0.0
    edc-timepoint==1.0.0
    edc-transfer==1.0.0
    edc-unblinding==1.0.1
    edc-utils==1.0.0
    edc-view-utils==1.0.0
    edc-visit-schedule==4.0.8
    edc-visit-tracking==1.0.0
    edc-vitals==1.0.0
    # Django
    Django>=5.1.5,<5.2

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    image*

[flake8]
max-line-length = 95
